k8s/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpbin-network-policy
  namespace: httpbin
spec:
  podSelector:
    matchLabels:
      app: httpbin
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []  # Restrict as needed based on your access requirements
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
